--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline",
-    "server": "node ./src/server",
+    "postinstall": "webpack-dev-server --hot --inline",
+    "start": "node ./src/server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm run server"
   },
   "author": "",
   "license": "ISC",
