--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "react-loader": "^2.4.0",
     "react-redux": "4.4.5",
     "react-router": "2.4.1",
-    "redux": "3.5.2"
-  },
-  "devDependencies": {
+    "redux": "3.5.2",
     "autoprefixer": "6.4.0",
     "babel-core": "6.13.2",
     "babel-loader": "6.2.4",
